<resources>
    <string name="app_name">EPMC</string>
    <string name="tv41">At East Parade, you will find people from all the six dioceses of CSI in Kerala, some who were born and brought up in Bangalore while some others have just moved in.</string>
    <string name="tv24">East Parade is a diaspora church whose members migrated to Bangalore from Kerala over the last couple of generations.</string>
    <string name="tv37">The services are conducted in Malayalam, with an English service once a month.</string>
    <string name="tv42">When you come to East Parade on a weekend our aim is that you would be inspired by the sermon, encouraged by the worship, welcomed by our amazing community of people and be reminded that God’s grace is here!</string>
    <string name="tv84">Our goal at East Parade is to create environments and experiences where you can encounter God in the midst of your life.</string>
    <string name="todo">TODO</string>
    <string name="tv123">The choir meets for practice every Sunday after the worship service. Vocal training involves rigorous breathing and tonal lessons and exercises. It is the synergy of this training and blessing from above that equips the singers and fine tune their voices to render pieces that an ordinary choir would not normally attempt. The East Parade Chorale has, to its credit, a handful of Concerts in addition to Christmas Carol Services which is an annual event.</string>
    <string name="tv124">You don’t need to be a great singer to join the choir at East Parade. God takes a bunch of voices—some strong and some not as strong—and blends them together to create beautiful music that honors Him.</string>
    <string name="tv88">We welcome anyone who has a wish to sing for the lord to join us.</string>
    <string name="tv90">Please contact anyone from the choir group, and they would be happy to help you out.</string>
    <string name="b26">Goals</string>
    <string name="tv134">b) To help children develop good singing and musicianship skills to foster the enjoyment of singing.</string>
    <string name="tv135">a) To teach children the core of hymns and spiritual songs, which help them to learn the music of the faith and begin to trust, that God’s promises are theirs.</string>
    <string name="tv133">One intangible but substantial benefit we reap from the junior Choir is that the children learn that they are part of the worship services and that realization is likely to remain with them through out their life.</string>
    <string name="tv26">Rev. Nebu Skariah (Presbyter-In-Charge)</string>
    <string name="tv137">Rt. Rev. Dharmaraj Rasalam (CSI Moderator)</string>
    <string name="tv27">Rev. Dr. Prasana Kumar Samuel (Bishop of KCD)</string>
    <string name="tv141">Rev. Dn. Darwin V. Vadakkethalakkal
        (Asst. Presbyter-In-Charge)</string>
    <string name="tv43">+91 9901801555</string>
    <string name="tv81">+91 8971357074</string>
    <string name="tv38">Rev. Dn. Darwin V Vadakkethalakkal</string>
    <string name="tv40">Rev. Nebu Skariah</string>
    <string name="tv4">8025582867</string>
    <string name="tv12">Church Office</string>
    <string name="tv11">Assistant-Presbyter</string>
    <string name="tv8">Presbyter-In-Charge</string>
    <string name="b10">Choir</string>
    <string name="b18">Mission and Ministry</string>
    <string name="b20">Senior Christian Fellowship</string>
    <string name="b19">Women\'s Fellowship</string>
    <string name="b17">Youth Fellowship</string>
    <string name="b15">Sunday School</string>
    <string name="tv120">Mission Convention</string>
    <string name="tv119">Back to School Project</string>
    <string name="tv118">Christmas gifts</string>
    <string name="tv16">The Cross continuous to be the sign of hope for the witnessing Church, which strives towards Unity, Peace and Reconciliation as a vibrant Channel of God.</string>
    <string name="tv114">The Church through her mission expresses solidarity with the broken communities for a new hope to face the challenges of life.</string>
    <string name="tv113">The Church of South India affirms that the Church is the Servant of God to carry on the mission rooted in Jesus Christ.</string>
    <string name="tv115">“That they all may be one, and that the world may believe that you have sent me”</string>
    <string name="tv117">And the Church of South India would become an effective instrument of God’s mission so there will be Greater peace Closer fellowship Fuller life in the Church Renewed commitment for the proclamation of the Gospel of Jesus Christ through word and deed.</string>
    <string name="tv116">The Church of South India (CSI) affirms that the purpose of the union is to fulfill the priestly prayer of Jesus Christ, the Lord of the Church</string>
    <string name="tv55">Based on the Scriptures.</string>
    <string name="tv13">Mission</string>
    <string name="tv71">Vision</string>
    <string name="tv29">The Malayalam Holy Communion service starts at 6:30am every Sunday and at 10:15am on all Sundays except the third.</string>
    <string name="tv35">Enter from either the MG Road entrance or the Dickenson Road entrance to the Church Campus. Our parking volunteers will escort you to the closest available parking spot.</string>
    <string name="tv33">You can find our location on the map.</string>
    <string name="tv31">Where should I park?</string>
    <string name="tv34">When does the service start?</string>
    <string name="tv32">How do I get there?</string>
    <string name="b32">Visit Us</string>
    <string name="tv91">The membership is open to all senior members of the church who have retired from their normal work.</string>
    <string name="tv93">When SCF started, there were only 34 members, which have now grown to over 200 in 20 year’s time.</string>
    <string name="tv92">The members find time to be with the bereaved families in prayer and also spend time with families going through difficult times.</string>
    <string name="tv73">The Senior Christian Fellowship (SCF) formed in December 1997 is the newest organ of the East Parade C.S.I Malayalam Pastorate. The aims and objectives of SCF are the spiritual, mental and social development of the elderly people in the church and also to help them to involve in all church activities meaningfully. SCF also helps the church to function on sound Christian principles and for the spiritual welfare of the church members.</string>
    <string name="tv121">A group of around 300 children in number who meet every Sunday (except 3rd) at 10:45am. These young minds leave church during service just before the sermon to make it in time for worship which happens in the parish hall. Sunday school begins with a time of worship and then the children head to their class. The vision of Sunday school is that all the children may grow up in the knowledge and love of God, fearing Him and to accept Jesus as their personal Saviour.</string>
    <string name="bt21">Contact Us</string>
    <string name="tv28">We’re so glad you’ve decided to visit us! You’ll find a list of commonly asked questions.</string>
    <string name="tv30">Please don’t hesitate to give us a call at any of our numbers</string>
    <string name="tv61">Annual food sale in July and Wine and Cake sales for Christmas.</string>
    <string name="tv76">Mission field visits, Educational assistance, Monetary support for charities.</string>
    <string name="tv75">Every 3rd Saturday the Women’s Fellowship organizes visits to the sick and needy .</string>
    <string name="tv74">Regular Cottage prayers conducted every 2nd and 3rd Thursday at 3:00pm</string>
    <string name="tv77">Food Sales</string>
    <string name="tv80">Mission Support</string>
    <string name="tv79">Sick Visits</string>
    <string name="tv78">Cottage Prayers</string>
    <string name="b30">Calendar</string>
    <string name="b22">InReach Programs</string>
    <string name="b24">Outreach Programs</string>
    <string name="b23">Youth Meetings</string>
    <string name="tv54">-Build meaningful relationships and involvement with the other organs of the church, such as Sunday School, SCF, Women’s Fellowship, Choir, Family Ministry, etc.</string>
    <string name="tv58">-Grow in a personal relationship with Jesus</string>
    <string name="tv59">-Build healthy and wholesome relations among the youth of the Church</string>
    <string name="tv60">–Participate in the activities such as youth meetings, annual camps, etc.  </string>
    <string name="tv57">The vision of EMY is to help each member to:</string>
    <string name="tv56">The Youth Fellowship of CSI East Parade Malayalam Pastorate, popularly known as EMY, is an assembly of young people of the church in the age group of 14 to 35 years, working together for the glory of God and His most precious name.</string>
    <string name="tv68">There are many members of the church who are bed-ridden and unable to attend the regular church worship service as well as other activities of the church.</string>
    <string name="tv87">Through the in-reach programs, we reach out to these people, go to their home and spend time with them.</string>
    <string name="tv89">We sing songs and also conduct a small worship service at their home. As part of the In-Reach program, we also conduct carol rounds at the homes of the elderly.</string>
    <string name="tv66">We meet every Sunday Morning at 9 AM at the church. These meetings are a time of praise and worship followed by a message by an internal or external speaker. The gists of the messages are posted on the EMY whatsapp brodcast messages.</string>
    <string name="tv70">We have outreach programs once or twice each month. We visit orphanages, hospitals, old age homes, etc. as part of our outreach mission and try to spread a little bit of joy and cheer amongst the people who are normally deprived of the same.</string>
    <string name="tv85">These visits serve as a reminder to us of God’s manifold blessings that have been unconditionally showered on us, which we most often take for granted.</string>
    <string name="tv86">We sing songs and share some snacks with these people and spend some time with them trying to understand them.</string>
    <string name="title_activity_visitus">Map</string>
</resources>